--- a/KanjiReader/KanjiReader.csproj
+++ b/KanjiReader/KanjiReader.csproj
@@ -28,4 +28,10 @@
       <Folder Include="Migrations\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
