--- a/backend/KanjiReader/KanjiReader.csproj
+++ b/backend/KanjiReader/KanjiReader.csproj
@@ -22,6 +22,7 @@
       <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.5.25277.114" />
       <PackageReference Include="Npgsql" Version="9.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
     </ItemGroup>
 
     <ItemGroup>
