--- a/backend/KanjiReader/KanjiReader.csproj
+++ b/backend/KanjiReader/KanjiReader.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="15.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
