--- a/backend/KanjiReader/KanjiReader.csproj
+++ b/backend/KanjiReader/KanjiReader.csproj
@@ -8,8 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="15.0.1" />
-      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Google_GenerativeAI" Version="3.0.0" />
+      <PackageReference Include="Hangfire" Version="1.8.20" />
+      <PackageReference Include="Hangfire.AspNetCore" Version="1.8.20" />
+      <PackageReference Include="Hangfire.Core" Version="1.8.20" />
+      <PackageReference Include="Hangfire.PostgreSql" Version="1.20.12" />
       <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
