--- a/backend/KanjiReader/KanjiReader.csproj
+++ b/backend/KanjiReader/KanjiReader.csproj
@@ -36,4 +36,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Hangfire.PostgreSql\Hangfire.PostgreSql.csproj" />
+    </ItemGroup>
+
 </Project>
