--- a/backend/KanjiReader/KanjiReader.csproj
+++ b/backend/KanjiReader/KanjiReader.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Google_GenerativeAI" Version="3.0.0" />
+      <PackageReference Include="Claudia" Version="1.3.2" />
       <PackageReference Include="Hangfire" Version="1.8.20" />
       <PackageReference Include="Hangfire.AspNetCore" Version="1.8.20" />
       <PackageReference Include="Hangfire.Core" Version="1.8.20" />
