token refresh/save fix; requests headers

--- a/backend/KanjiReader/appsettings.json
+++ b/backend/KanjiReader/appsettings.json
@@ -3,10 +3,15 @@
     "BatchSize": 4,
     "ArticlesPerUrl": 4
   },
+  "NhkOptions": {
+    "BatchSize": 10
+  },
   "TextProcessingOptions": {
     "TextCountLimit": 50,
     "TextProcessingCount": 50,
-    "CooldownHours": 1,
+    "CooldownHours": 0,
+    "AiGenerationCooldownMinutes": 10,
+    "AiGenerationTokenLimit": 10000,
     "MinKanji": 50
   },
   "ThresholdOptions": {
